chore: prettier 적용
